# exo-ros

./: .gitignore  README.md  requirements.txt
src/assembly/: CMakeLists.txt  READEME.md  package.xml
src/assembly/config/: joint_names_MK1_FB900_Full_Body_Assembly_Flattned4.yaml
src/assembly/frame/: frames_2026-03-05_15.38.06.gv
src/assembly/launch/: display.launch.py  gazebo.launch.py
src/assembly/meshes/: Left_HChassie_Link.STL  Left_Hip_Shaft_Link.STL  Right_HChassie_Link.STL  Right_Hip_Shaft_Link.STL
src/assembly/urdf/: MK1_FB900_Full_Body_Assembly_Flattned4.urdf  MK1_FB900_Full_Body_Assembly_Flattned7.csv  MK1_FB900_Full_Body_Assembly_Flattned7.urdf
src/bringup_robot/: CMakeLists.txt  README.md
src/bringup_robot/config/: pids.yaml
src/bringup_robot/launch/: bringup.launch.py  mujoco.launch.py
src/bringup_robot/mujoco_description/: exo_model.mujoco.xml  mujoco_control.xml  scene.xml
src/bringup_robot/urdf/: control_interface.xacro
src/bringup_robot/urdf/output/: exo_model.urdf
src/exo_controller/: CMakeLists.txt  README.md
src/exo_msgs/: CMakeLists.txt  README.md
src/human-viz/: hlaunch.py  human.urdf
src/input_mapper/: CMakeLists.txt  README.md
src/mujoco_ros2_control/: CMakeLists.txt  README.md
src/ps_ros2_common/: CMakeLists.txt
src/state_estimator/: CMakeLists.txt  README.md
